# research-assistant-crewai-agents

./: .gitignore  README.md  pyproject.toml  report.md
output/: report.md
research_assistant_crewai_agents/: main.py
src/research_assistant_crewai_agents/: crew.py  main.py
src/research_assistant_crewai_agents/config/: tasks.yaml
src/tailor_my_cv/: crew.py  main.py
src/tailor_my_cv/config/: agents.yaml
tests/: test.ipynb
