[project]
name = "tailor_my_cv"
version = "0.1.0"
description = "Tailor my CV using crewAI"
authors = [{ name = "Degaga Wolde", email = "degagawolde@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
tailor_my_cv = "tailor_my_cv.main:run"
run_crew = "tailor_my_cv.main:run"
train = "tailor_my_cv.main:train"
replay = "tailor_my_cv.main:replay"
test = "tailor_my_cv.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/tailor_my_cv"]
