[project]
name = "research-assistant-crewai-agents"
version = "0.1.0"
description = "Research assistant using crewAI"
authors = [{ name = "Degaga Wolde", email = "degagawolde@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
research_assistant_crewai_agents = "research_assistant_crewai_agents.main:run"
run_crew = "research_assistant_crewai_agents.main:run"
train = "research_assistant_crewai_agents.main:train"
replay = "research_assistant_crewai_agents.main:replay"
test = "research_assistant_crewai_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/research_assistant_crewai_agents"]